--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://172.16.13.32/scglyy-root-code/gyltyfw/scp/blob/master/scp-mobile/ios/exeFile/DingXingScpApp.ipa</string>
+					<string>https://github.com/JadeLiy/TestGitApp/blob/master/DingXingScpApp.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
