--- a/ExportOptions.plist
+++ b/ExportOptions.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>compileBitcode</key>
-	<false/>
+	<true/>
 	<key>destination</key>
 	<string>export</string>
 	<key>manifest</key>
 	<dict>
 		<key>appURL</key>
-		<string>https://www.baidu.com</string>
+		<string>https://github.com/JadeLiy/TestGitApp/blob/master/DingXingScpApp.ipa</string>
 		<key>displayImageURL</key>
-		<string>https://www.baidu.com</string>
+		<string>https://github.com/JadeLiy/TestGitApp/blob/master/icon.png</string>
 		<key>fullSizeImageURL</key>
-		<string>https://www.baidu.com</string>
+		<string>https://github.com/JadeLiy/TestGitApp/blob/master/icon2.png</string>
 	</dict>
 	<key>method</key>
 	<string>enterprise</string>
