--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/JadeLiy/TestGitApp/blob/master/DingXingScpApp.ipa</string>
+					<string>https://raw.githubusercontent.com/JadeLiy/TestGitApp/master/O2Oapp.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/JadeLiy/TestGitApp/blob/master/icon.png</string>
+					<string>https://raw.githubusercontent.com/JadeLiy/TestGitApp/master/icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/JadeLiy/TestGitApp/blob/master/icon2.png</string>
+					<string>https://raw.githubusercontent.com/JadeLiy/TestGitApp/master/icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
