--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/JadeLiy/TestGitApp/master/O2Oapp.ipa</string>
+					<string>https://raw.githubusercontent.com/JadeLiy/TestGitApp/master/DingXingScpApp.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -35,7 +35,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>O2Oapp</string>
+				<string>供应商助手</string>
 			</dict>
 		</dict>
 	</array>
