--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/JadeLiy/TestGitApp/master/DingXingScpApp.ipa</string>
+					<string>http://61.163.210.202:4170/scp/app/api/version/download?type=2</string>
 				</dict>
 				<dict>
 					<key>kind</key>
